--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
       { image: "papierfischchen.jpg", name: "Papierfischchen", development: "ametabol" },
       { image: "Nest_saechsische_wespe.jpg", name: "Nest Sächsische Wespe", development: "holometabol" },
       { image: "feldwespe.jpg", name: "Feldwespe", development: "holometabol" },
-      { image: "feldwespe_nest.jpg", name: "Nest Feldwespe", development: "holometabol" }
+      { image: "feldwespe_nest.jpg", name: "Nest Feldwespe", development: "holometabol" },
       { image: "bettwanze.jpg", name: "Bettwanze", development: "hemimetabol" }
     ];
 
