--- a/index.html
+++ b/index.html
@@ -56,29 +56,53 @@
       { image: "stubenfliege.jpg", name: "Stubenfliege", development: "holometabol" },
       { image: "schmeissfliege.jpg", name: "Schmeißfliege", development: "holometabol" },
       { image: "fruchtfliege.jpg", name: "Fruchtfliege", development: "holometabol" },
-      { image: "deutsche_schabe.jpg", name: "Deutsche Schabe", development: "hemimetabol" },
-      { image: "orientalische_schabe.jpg", name: "Orientalische Schabe", development: "hemimetabol" },
-      { image: "amerikanische_schabe.jpg", name: "Amerikanische Schabe", development: "hemimetabol" },
-      { image: "schwarze_wegameise.jpg", name: "Schwarze Wegameise", development: "holometabol" },
-      { image: "pharaoameise.jpg", name: "Pharaoameise", development: "holometabol" },
-      { image: "menschenfloh.jpg", name: "Menschenfloh", development: "holometabol" },
-      { image: "katzenfloh.jpg", name: "Katzenfloh", development: "holometabol" },
-      { image: "hausbock.jpg", name: "Hausbock", development: "holometabol" },
+      { image: "deutsche_schabe.jpg", name: "Deutsche Schabe", development: "hemimetabol" } ,
+      { image: "orientalische_schabe.jpg", name: "Orientalische Schabe", development: "hemimetabol" } ,
+      { image: "amerikanische_schabe.jpg", name: "Amerikanische Schabe", development: "hemimetabol" } ,
+      { image: "schwarze_wegameise.jpg", name: "Schwarze Wegameise", development: "holometabol" } ,
+      { image: "pharaoameise.jpg", name: "Pharaoameise", development: "holometabol" } ,
+      { image: "menschenfloh.jpg", name: "Menschenfloh", development: "holometabol" } ,
+      { image: "katzenfloh.jpg", name: "Katzenfloh", development: "holometabol" } ,
+      { image: "hausbock.jpg", name: "Hausbock", development: "holometabol" } ,
       { image: "gemeiner_nagekaefer.jpg", name: "Gemeiner Nagekäfer", development: "holometabol" },
-      { image: "kleidermotte.jpg", name: "Kleidermotte", development: "holometabol" },
-      { image: "pelzmotte.jpg", name: "Pelzmotte", development: "holometabol" },
-      { image: "deutsche_wespe.jpg", name: "Deutsche Wespe", development: "holometabol" },
-      { image: "gemeine_wespe.jpg", name: "Gemeine Wespe", development: "holometabol" },
-      { image: "hausmuecke.jpg", name: "Hausmücke", development: "holometabol" },
-      { image: "silberfischchen.jpg", name: "Silberfischchen", development: "ametabol" },
-      { image: "maeuseassel.jpg", name: "Mäuseassel", development: "ametabol" },
+      { image: "kleidermotte.jpg", name: "Kleidermotte", development: "holometabol" } ,
+      { image: "pelzmotte.jpg", name: "Pelzmotte", development: "holometabol" } ,
+      { image: "deutsche_wespe.jpg", name: "Deutsche Wespe", development: "holometabol" } ,
+      { image: "gemeine_wespe.jpg", name: "Gemeine Wespe", development: "holometabol" } ,
+      { image: "hausmuecke.jpg", name: "Hausmücke", development: "holometabol" } ,
+      { image: "silberfischchen.jpg", name: "Silberfischchen", development: "ametabol" } ,
+      { image: "maeuseassel.jpg", name: "Mäuseassel", development: "ametabol" } ,
       { image: "wollkrautbluetenkaefer.jpg", name: "Wollkrautblütenkäfer", development: "holometabol" },
       { image: "wollkrautbluetenkaefer_larve.jpg", name: "Wollkrautblütenkäfer Larve", development: "holometabol" },
-      { image: "papierfischchen.jpg", name: "Papierfischchen", development: "ametabol" },
+      { image: "papierfischchen.jpg", name: "Papierfischchen", development: "ametabol" } ,
       { image: "Nest_saechsische_wespe.jpg", name: "Nest Sächsische Wespe", development: "holometabol" },
-      { image: "feldwespe.jpg", name: "Feldwespe", development: "holometabol" },
+      { image: "feldwespe.jpg", name: "Feldwespe", development: "holometabol" } ,
       { image: "feldwespe_nest.jpg", name: "Nest Feldwespe", development: "holometabol" } ,
-      { image: "bettwanze.jpg", name: "Bettwanze", development: "hemimetabol" }
+      { image: "bettwanze.jpg", name: "Bettwanze", development: "hemimetabol" } ,
+      { image: "kiefernzapfenwanze.jpg", name: "Kiefernzapfenwanze", development: "hemimetabol" } ,
+      { image: "braune_wegameise.jpg", name: "Breune Wegameise", development: "holometabol" } ,
+      { image: "schmetterlingsmuecke.jpg", name: "Schmetterlingsmücke", development: "holometabol" } ,
+      { image: "braunbandschabe.jpg", name: "Braunbandschabe", development: "hemimetabol" } ,
+      { image: "australische_schabe.jpg", name: "Australische Schabe", development: "holometabol" } ,
+      { image: "heimchen.jpg", name: "heimchen", development: "hemimetabol" } ,
+      { image: "rote_vogelmilbe.jpg", name: "Rote Vogelmilbe", development: "hemimetabol" } ,
+      { image: "taubenzecke.jpg", name: "Taubenzecke", development: "hemimetabol" } ,
+      { image: "getreidekapuziner.jpg", name: "Getreidekapuziner", development: "holometabol" } ,
+      { image: "maiskaefer.jpg", name: "Maiskäfer", development: "holometabol" } ,
+      { image: "eichenprozessionsspinner.jpg", name: "Eichenprozessionsspinner", development: "holometabol" } ,
+      { image: "vierhornkaefer.jpg", name: "Vierhornkäfer", development: "holometabol" } ,
+      { image: "khaprakaefer.jpg", name: "Khaprakäfer", development: "holometabol" } ,
+      { image: "speisebohnenkaefer.jpg", name: "Speisebohnenkäfer", development: "holometabol" } ,
+      { image: "tabakkaefer.jpg", name: "Tabakkäfer", development: "holometabol" } ,
+      { image: "gemeiner_speckkaefer.jpg", name: "Gemeiner Speckkäfer", development: "holometabol" } ,
+      { image: "pelzkaefer.jpg", name: "Pelzkäfer", development: "holometabol" } ,
+      { image: "feuerwanze.jpg", name: "Feuerwanze", development: "hemimetabol" } ,
+      { image: "messingkaefer.jpg", name: "Messingkäfer", development: "holometabol" } ,
+      { image: "kugelkaefer.jpg", name: "Kugelkäfer", development: "holometabol" } ,
+      { image: "kraeuterdieb.jpg", name: "räuterdieb", development: "holometabol" } ,
+      { image: "moderkaefer.jpg", name: "Moderkäfer", development: "holometabol" } ,
+      { image: "ofenfischchen.jpg", name: "Ofenfischchen", development: "ametabol" } ,
+      { image: "schwebfliege.jpg", name: "Schwebfliege", development: "holometabol" } ,
     ];
 
     const imgElement = document.getElementById("insect-image");
