--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
       { image: "braune_wegameise.jpg", name: "Breune Wegameise", development: "holometabol" } ,
       { image: "schmetterlingsmuecke.jpg", name: "Schmetterlingsmücke", development: "holometabol" } ,
       { image: "braunbandschabe.jpg", name: "Braunbandschabe", development: "hemimetabol" } ,
-      { image: "australische_schabe.jpg", name: "Australische Schabe", development: "holometabol" } ,
+      { image: "australische_schabe.jpg", name: "Australische Schabe", development: "hemimetabol" } ,
       { image: "heimchen.jpg", name: "heimchen", development: "hemimetabol" } ,
       { image: "rote_vogelmilbe.jpg", name: "Rote Vogelmilbe", development: "hemimetabol" } ,
       { image: "taubenzecke.jpg", name: "Taubenzecke", development: "hemimetabol" } ,
