--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       { image: "deutsche_wespe.jpg", name: "Deutsche Wespe", development: "holometabol" } ,
       { image: "gemeine_wespe.jpg", name: "Gemeine Wespe", development: "holometabol" } ,
       { image: "hausmuecke.jpg", name: "Hausmücke", development: "holometabol" } ,
-      { image: "silberfischchen.jpg", name: "Silberfischchen", development: "ametabol" } ,
+      { image: "silberfischchen.JPG", name: "Silberfischchen", development: "ametabol" } ,
       { image: "maeuseassel.jpg", name: "Mäuseassel", development: "ametabol" } ,
       { image: "wollkrautbluetenkaefer.jpg", name: "Wollkrautblütenkäfer", development: "holometabol" },
       { image: "wollkrautbluetenkaefer_larve.jpg", name: "Wollkrautblütenkäfer Larve", development: "holometabol" },
