--- a/index.html
+++ b/index.html
@@ -60,8 +60,7 @@
       { image: "amerikanische_schabe.jpg", name: "Amerikanische Schabe", development: "hemimetabol" } ,
       { image: "schwarze_wegameise.jpg", name: "Schwarze Wegameise", development: "holometabol" } ,
       { image: "pharaoameise.jpg", name: "Pharaoameise", development: "holometabol" } ,
-      { image: "menschenfloh.jpg", name: "Menschenfloh", development: "holometabol" } ,
-      { image: "katzenfloh.jpg", name: "Katzenfloh", development: "holometabol" } ,
+      { image: "katzenfloh.jpg", name: "Floh", development: "holometabol" } ,
       { image: "hausbock.jpg", name: "Hausbock", development: "holometabol" } ,
       { image: "gemeiner_nagekaefer.jpg", name: "Gemeiner Nagekäfer", development: "holometabol" },
       { image: "kleidermotte.jpg", name: "Kleidermotte", development: "holometabol" } ,
@@ -70,7 +69,7 @@
       { image: "gemeine_wespe.jpg", name: "Gemeine Wespe", development: "holometabol" } ,
       { image: "hausmuecke.jpg", name: "Hausmücke", development: "holometabol" } ,
       { image: "silberfischchen.JPG", name: "Silberfischchen", development: "ametabol" } ,
-      { image: "maeuseassel.jpg", name: "Mäuseassel", development: "ametabol" } ,
+      { image: "maeuseassel.jpg", name: "Assel", development: "ametabol" } ,
       { image: "wollkrautbluetenkaefer.jpg", name: "Wollkrautblütenkäfer", development: "holometabol" },
       { image: "wollkrautbluetenkaefer_larve.jpg", name: "Wollkrautblütenkäfer Larve", development: "holometabol" },
       { image: "papierfischchen.jpg", name: "Papierfischchen", development: "ametabol" } ,
@@ -83,7 +82,7 @@
       { image: "schmetterlingsmuecke.jpg", name: "Schmetterlingsmücke", development: "holometabol" } ,
       { image: "braunbandschabe.jpg", name: "Braunbandschabe", development: "hemimetabol" } ,
       { image: "australische_schabe.jpg", name: "Australische Schabe", development: "hemimetabol" } ,
-      { image: "heimchen.jpg", name: "heimchen", development: "hemimetabol" } ,
+      { image: "heimchen.jpg", name: "Heimchen", development: "hemimetabol" } ,
       { image: "rote_vogelmilbe.jpg", name: "Rote Vogelmilbe", development: "hemimetabol" } ,
       { image: "taubenzecke.jpg", name: "Taubenzecke", development: "hemimetabol" } ,
       { image: "getreidekapuziner.jpg", name: "Getreidekapuziner", development: "holometabol" } ,
